--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,6 +116,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/calculate"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/card_round"
         app:layout_constraintStart_toStartOf="@+id/card_round"
         app:layout_constraintTop_toBottomOf="@+id/card_round" />
