--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
         android:layout_width="407dp"
         android:layout_height="85dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="10dp"
         android:translationZ="10dp"
         app:cardBackgroundColor="#f0f0f0f0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/cardView3">
 
         <EditText
             android:id="@+id/cost_of_service"
@@ -138,17 +138,49 @@
         app:layout_constraintStart_toStartOf="@+id/calculate_button"
         app:layout_constraintTop_toBottomOf="@+id/calculate_button">
 
-        <TextView
-            android:id="@+id/tip_result"
-            android:layout_width="374dp"
-            android:layout_height="44dp"
-            android:layout_marginEnd="180dp"
-            android:background="#f0f0f0f0"
-            android:gravity="center"
-            android:text="Tip Amount"
-            android:textSize="25dp"
-            tools:ignore="HardcodedText"
-            tools:text="Tip amount: $1043" />
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/tip_result"
+        android:layout_width="374dp"
+        android:layout_height="44dp"
+        android:background="#f0f0f0f0"
+        android:gravity="center"
+        android:text="Tip Amount"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="@+id/calculate_button"
+        app:layout_constraintStart_toStartOf="@+id/calculate_button"
+        app:layout_constraintTop_toBottomOf="@+id/calculate_button"
+        tools:ignore="HardcodedText"
+        tools:text="Tip amount: $1043" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
+        android:layout_width="446dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="6dp"
+        android:translationZ="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/ServiceButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Service"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/AboutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginRight="8dp"
+            android:text="About"
+            android:textColor="@color/white" />
     </androidx.cardview.widget.CardView>
 
 
