--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,14 @@
         android:layout_width="407dp"
         android:layout_height="85dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
         android:translationZ="10dp"
+        app:cardCornerRadius="30dp"
         app:cardBackgroundColor="#f0f0f0f0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView3">
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/cost_of_service"
@@ -90,6 +91,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
         android:translationZ="10dp"
+        app:cardCornerRadius="20dp"
         app:cardBackgroundColor="#f0f0f0f0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,59 +130,102 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_prices"
         android:layout_width="0dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="300dp"
+        android:layout_height="250dp"
         android:translationZ="10dp"
+        app:cardCornerRadius="30dp"
         app:cardBackgroundColor="#f0f0f0f0"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:outlineSpotShadowColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="@+id/calculate_button"
         app:layout_constraintStart_toStartOf="@+id/calculate_button"
         app:layout_constraintTop_toBottomOf="@+id/calculate_button">
 
-    </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/tip_result"
-        android:layout_width="374dp"
-        android:layout_height="44dp"
-        android:background="#f0f0f0f0"
-        android:gravity="center"
-        android:text="Tip Amount"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="@+id/calculate_button"
-        app:layout_constraintStart_toStartOf="@+id/calculate_button"
-        app:layout_constraintTop_toBottomOf="@+id/calculate_button"
-        tools:ignore="HardcodedText"
-        tools:text="Tip amount: $1043" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView3"
-        android:layout_width="446dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="6dp"
-        android:translationZ="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <Button
-            android:id="@+id/ServiceButton"
+        <TextView
+            android:id="@+id/costOfServiceText"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textSize="22sp"
+            android:text="Cost of Service: - - - -"
+            tools:text="Cost of Service: R$"
+            />
+        <TextView
+            android:id="@+id/tipResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Service"
-            android:textColor="@color/white" />
+            android:layout_marginTop="105dp"
+            android:text="Tip Amount: - - - - "
+            android:textSize="22sp"
+            tools:text="Tip amount: R$" />
 
-        <Button
+        <TextView
+            android:id="@+id/finalPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textSize="22sp"
+            android:layout_marginTop="190dp"
+            android:text="Final Price: - - - - "
+            tools:text="Final Price: R$"
+
+            />
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:translationZ="10dp"
+        app:cardBackgroundColor="#D6D7D7"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
             android:id="@+id/AboutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="65dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="4dp"
+            android:layout_marginBottom="6dp"
+            app:srcCompat="@android:drawable/ic_menu_info_details" />
+
+        <TextView
+            android:id="@+id/AboutButtonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="2dp"
+            android:layout_marginTop="15dp"
+            android:text="About App" />
+
+        <ImageButton
+            android:id="@+id/SaveTipButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginRight="8dp"
-            android:text="About"
-            android:textColor="@color/white" />
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="9dp"
+            app:srcCompat="@android:drawable/ic_menu_save" />
+
+        <TextView
+            android:id="@+id/SaveTipButtonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="43dp"
+            android:layout_marginRight="20dp"
+            android:text="Save" />
+
     </androidx.cardview.widget.CardView>
 
 
