--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -21,12 +21,12 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="300dp"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:cardCornerRadius="15dp"
-            app:cardBackgroundColor="#f1f1f1f1"
+            app:cardBackgroundColor="#D6D7D7"
             app:layout_constraintTop_toTopOf="parent" >
 
             <TextView
@@ -43,8 +43,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="45dp"
+                android:padding="10dp"
                 android:textSize="20dp"
-                android:text="This app was created while reading the 'Android Developer' tutorials. But with a few changes that i by myself to study" />
+                android:text="This app was created while reading the 'Android Developer' tutorials. But with a few changes that i've made by myself to study" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -64,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="65dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="180dp"
+                android:layout_marginLeft="340dp"
 
                 app:srcCompat="@android:drawable/ic_menu_info_details" />
 
@@ -73,27 +74,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="162dp"
                 android:layout_marginTop="23dp"
                 android:text="About App" />
 
-            <ImageButton
-                android:id="@+id/SaveTipButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="3dp"
-                android:layout_marginLeft="345dp"
-                app:srcCompat="@android:drawable/ic_menu_save" />
-
-            <TextView
-                android:id="@+id/SaveTipButtonText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="50dp"
-                android:layout_marginRight="18dp"
-                android:text="Save" />
 
             <ImageButton
                 android:id="@+id/bt_Home"
