--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -194,18 +194,18 @@
             android:id="@+id/bt_About"
             android:layout_width="wrap_content"
             android:layout_height="65dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="3dp"
-            android:layout_marginBottom="6dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="4dp"
             app:srcCompat="@android:drawable/ic_menu_info_details" />
 
         <TextView
             android:id="@+id/AboutButtonText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="2dp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="18dp"
             android:text="About App" />
 
         <ImageButton
