--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.TipTime" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#0000cc</item>
-        <item name="colorPrimaryVariant">#0000cc</item>
-        <item name="colorOnPrimary">#0000cc</item>
+        <item name="colorPrimary">#004AAD</item>
+        <item name="colorPrimaryVariant">#004AAD</item>
+        <item name="colorOnPrimary">#004AAD</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#0000cc</item>
-        <item name="colorSecondaryVariant">#0000cc</item>
-        <item name="colorOnSecondary">#0000cc</item>
+        <item name="colorSecondary">#004AAD</item>
+        <item name="colorSecondaryVariant">#004AAD</item>
+        <item name="colorOnSecondary">#004AAD</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
