--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -148,7 +148,7 @@
             android:layout_width="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:textSize="22sp"
             android:text="Cost of Service: - - - -"
             tools:text="Cost of Service: R$"
@@ -158,7 +158,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="105dp"
+            android:layout_marginTop="80dp"
             android:text="Tip Amount: - - - - "
             android:textSize="22sp"
             tools:text="Tip amount: R$" />
@@ -169,11 +169,20 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:textSize="22sp"
-            android:layout_marginTop="190dp"
+            android:layout_marginTop="150dp"
             android:text="Final Price: - - - - "
             tools:text="Final Price: R$"
 
             />
+
+        <Button
+            android:id="@+id/SaveTipButton"
+            android:layout_width="144dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="105dp"
+            android:text="Save Tip"
+            android:textColor="@color/white" />
 
 
     </androidx.cardview.widget.CardView>
@@ -209,7 +218,7 @@
             android:text="About App" />
 
         <ImageButton
-            android:id="@+id/SaveTipButton"
+            android:id="@+id/SavedTipsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -223,8 +232,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="43dp"
-            android:layout_marginRight="22dp"
-            android:text="Save" />
+            android:layout_marginRight="7dp"
+            android:text="Saved Tips" />
 
     </androidx.cardview.widget.CardView>
 
