--- a/app/src/main/res/layout/activity_save_tips.xml
+++ b/app/src/main/res/layout/activity_save_tips.xml
@@ -53,12 +53,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="43dp"
-            android:layout_marginRight="22dp"
+            android:layout_marginRight="20dp"
             android:text="About" />
 
     </androidx.cardview.widget.CardView>
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tipsList"
         android:layout_width="409dp"
         android:layout_height="660dp"
         android:layout_marginStart="1dp"
@@ -68,13 +69,7 @@
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
