--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -117,7 +117,7 @@
                 android:layout_marginTop="60dp"
                 android:padding="10dp"
                 android:textSize="20sp"
-                android:text="What happen if you do not select any of the option for tips because you did not like it? In this case we are charging 5% tip because by the law you are obliged to give at least 5% tips" />
+                android:text="What happen if you do not select any of the options for the tips because you did not like it? In this case we are charging 5% tip because by the law you are obliged to give at least 5% tips" />
         </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
