--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -180,6 +180,7 @@
             android:layout_width="144dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="5dp"
             android:layout_marginTop="105dp"
             android:text="Save Tip"
             android:textColor="@color/white" />
